Bug 93113 - Crash Inserting Special Character
Summary: Crash Inserting Special Character
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.0.0.5 release
Hardware: x86-64 (AMD64) All
: highest critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.1.0 target:5.0.1
Keywords: regression
: 91855 92336 93419 93576 93593 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-08-04 05:45 UTC by David
Modified: 2016-10-25 19:21 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
incorrect font table (5.0.0.x) (44.16 KB, image/png)
2015-08-05 00:28 UTC, David
Details
Correct font table (4.4.5.2) (35.82 KB, image/png)
2015-08-05 00:29 UTC, David
Details
Screens window when crash. (25.93 KB, image/png)
2015-08-05 14:16 UTC, m_a_riosv
Details
Screenshot Visual Studio message. (14.52 KB, image/png)
2015-08-05 14:18 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David 2015-08-04 05:45:41 UTC
Not sure if this is fixed yet or not but I was having frequent freezes and crashes in the LO 4.4.x so I decided to upgrade to 5.0.4 to see if the bug had been fixed.

It hasn't. I'm making a document that uses lots of special characters. The dialog window used to insert them often becomes slow and unresponsive. Often this completely freezes LO. I have to kill the application, restart it, and recover the document.

Sometimes, a special character is inserted and it disappears too.
Comment 1 Jacques Guilleron 2015-08-04 14:45:04 UTC
Hi David,

I reproduce with 
LO 5.1.0.0.alpha1+ Build ID: 8cfdd81b70ef37927b40497ffd10034f28335034
TinderBox: Win-x86@39, Branch:master, Time: 2015-07-24_02:47:18 Locale: fr-FR
LO 5.0.0.3 Build ID: f79b5ba13f5e6cbad23f8038060e556217e66632
but not with 
LO 5.0.0.2 Build ID: a26d58f11b99b6aeddf7f7884effea188cc6e512
OS : Windows 7 Home Premium

Selecting icon for Special Character, LO freezes.
Trying to quit LO by Ctrl+Alt+Suppr, I can see the error message : 
LibreOffice 5.0 - Fatal error
SEH Exception: ACCESS VIOLATION
Selecting Insert > Special Character, Fatal error message is displayed, LO closes and recovery process is launch.

I verified with Writer and Calc, but probably all components affected.

Thank you for the report.
Comment 2 m_a_riosv 2015-08-04 17:09:45 UTC
I can not reproduce with calc:
Win7x64Ultimate
Version: 5.0.0.5 (x64)Build ID: 1b1a90865e348b492231e1c451437d7a15bb262b

Maybe resetting the user profile could help, I think 5.x uses the same profile than 4.x, but I have the 5.0 version with a parallel installation that has their own clean profile.

https://wiki.documentfoundation.org/UserProfile
Comment 3 David 2015-08-04 23:29:55 UTC
Resetting profile does not make a difference.

I cannot comment on Calc because I only use Draw. I use Draw daily for all of my work so when something is broken I usually notice quickly.

Also, I am using Linux not Windoze so I would not be surprised if this only affects 64bit linux users.
Comment 4 m_a_riosv 2015-08-04 23:55:50 UTC
Thanks for test.

I can't reproduce also with Draw.

Please, does it happen with all Fonts and any subset?, could be useful for devs.
Comment 5 David 2015-08-05 00:28:17 UTC
Created attachment 117658 [details]
incorrect font table (5.0.0.x)
Comment 6 David 2015-08-05 00:29:21 UTC
Created attachment 117659 [details]
Correct font table (4.4.5.2)
Comment 7 David 2015-08-05 00:29:40 UTC
It is an intermittent bug unfortunately.

I migrated to the 5.0.0.x release candidates because the freezes were affecting my work so often I was afraid I would corrupt my work document with the frequent document recovery processes.

Unfortunately, the freezes also affect the upcoming 5 series.

What I have managed to determine is that the font table problem reported in my other bug (probably related to this bug) affects 5.0.0.2, 5.0.0.4, and 5.0.0.5

I have downgraded to 4.4.5.2 and the tables are now rendered correctly. I will attach pix to this bug and the other in the hope someone can rectify it.
Comment 8 m_a_riosv 2015-08-05 14:16:45 UTC
Created attachment 117674 [details]
Screens window when crash.

I have not in Win7 subset Domino Tiles.

LibreOffice crash after insert characters from Sigoe family font when I try to open again the Insert Special Character box.

Step to reproduce:
- Create a new file in Draw.
- Create a text box
- Call Special Character
- Select any Segoe Font.
- Insert a character, and close the box.
- [Enter] in the text box.
- Call Special Character again.
- LibreOffice crash, seems as if it is trying to select U+FFFF(65535) character, see attached screenshot.
Comment 9 m_a_riosv 2015-08-05 14:18:09 UTC
Created attachment 117676 [details]
Screenshot Visual Studio message.

Win7x64Ultimate
Version: 5.0.0.5 (x64)
Build ID: 1b1a90865e348b492231e1c451437d7a15bb262b
Comment 10 Caolán McNamara 2015-08-12 12:38:04 UTC
recurses to death where paint ends up forcing a paint on itself
Comment 11 Commit Notification 2015-08-12 12:49:06 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=79395c934771818686e488a7c2e382a00456c8a1

Resolves: tdf#93113 crash on revisiting insert special character

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Caolán McNamara 2015-08-12 13:04:33 UTC
proposed for 5.0.1
Comment 13 Maxim Monastirsky 2015-08-12 14:13:17 UTC
*** Bug 92336 has been marked as a duplicate of this bug. ***
Comment 14 Commit Notification 2015-08-12 14:15:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a062344931002d88de529d834707444864acfeee&h=libreoffice-5-0

Resolves: tdf#93113 crash on revisiting insert special character

It will be available in 5.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 David 2015-08-13 03:39:11 UTC
Does the proposed patch also fix the problem some of us are having with font tables not being displayed correctly or is it just the crash / lock up bug?
Comment 16 Maxim Monastirsky 2015-08-13 22:10:45 UTC
*** Bug 93419 has been marked as a duplicate of this bug. ***
Comment 17 Maxim Monastirsky 2015-08-13 22:15:08 UTC
*** Bug 91855 has been marked as a duplicate of this bug. ***
Comment 18 Commit Notification 2015-08-17 10:49:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3d6b9197d2b8aa690c5afaa920a28b1d9f0407c0&h=libreoffice-5-0-1

Resolves: tdf#93113 crash on revisiting insert special character

It will be available in 5.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 19 m_a_riosv 2015-08-22 21:39:30 UTC
*** Bug 93593 has been marked as a duplicate of this bug. ***
Comment 20 Cor Nouws 2015-08-23 09:04:26 UTC
*** Bug 93576 has been marked as a duplicate of this bug. ***
Comment 21 Petr Krenl 2015-12-06 10:42:22 UTC
Isn't this bug fixed for versions 5.0.1 upwards?

It continues to appear in 5.0.3 release. 
Version 5.0.3.2 x64, platform win7 x64 home premium.

The crashes appear in the same circumstances as described in comment 1.
Comment 22 m_a_riosv 2015-12-06 13:35:28 UTC
Hi @Petr, I have test with my step to reproduce in comment#8, and no issue.

Just in case please test disabling Menu/Tools/Options/View/Graphics Output - Use OpenGL for all rendering (restart LibreOffice)

Testing again resetting the user profile:
https://wiki.documentfoundation.org/UserProfile
Usually it's enough renaming/deleting the file "user/registrymodifications.xcu",  it affect all the options in Menu/Tools/Options, and the files "user/basic/dialog.xlc" and "scrip.xlc" are overwritten, additionally custom colors in "user/config/standard.soc" are lost.
Comment 23 Petr Krenl 2015-12-06 20:31:10 UTC
Hi, Miguel, thanks for your reply.

These actions don't have any effect on crashes:
(1) Removing Libreoffice, making a clean reinstall, thereby removing all of the old profile.
(2) Disabling OpenGL or other graphics options through Menu/Tools/Options/View/Graphics Output.

Followed the steps in your comment 6. Couldn't go any further than step three, that's
Step to reproduce:
- Create a new file in Draw.
- Create a text box
- Call Special Character
At the moment Special Character is called Libreoffice shows Fatal error message and closing message crashes application.

There's a slight difference in the platforms used which may be the cause for different behaviour. I got crashes in W. Home premium as in comment 1 and you tested in W. Ultimate in your comment 2. In Home premium I checked Writer, Calc, Impress, Draw. All get special character crashes.
Comment 24 m_a_riosv 2015-12-06 21:03:34 UTC
Does it happen with any Font or with some in particular?
Comment 25 Petr Krenl 2015-12-07 02:20:10 UTC
Possibly happens in all of them. Checked some. Liberation serif, Arial, Lucida console, Times new roman. Doesn't make any difference for the crash pattern.