Resolves: tdf#93113 crash on revisiting insert special character

this effectively reverts

commit c43ee00e5d2edfebfa148b310813335aab27db34
Author: Herbert Duerr <hdu@openoffice.org>
Date:   Wed Aug 15 13:20:51 2001 +0000

    #91025# reduce flicker in charmap dialog

in favour of the new double buffering

Paint is calling RecalculateFont which calls SelectIndex
which calls Update which calls Paint, boom

Change-Id: I69e9f53b7db09837ff08a2ce9fc6f81a52b5c794
(cherry picked from commit 79395c934771818686e488a7c2e382a00456c8a1)
Reviewed-on: https://gerrit.libreoffice.org/17675
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Reviewed-by: Jan Holesovsky <kendy@collabora.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>